--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
   --clr-300: #00ffb3;
   --clr-500: #587c71;
   --clr-900: #202222;
+  --clr-910: #202222b1;
+  --clr-920: #171919;
 }
 
 body {
@@ -20,4 +22,77 @@ body {
   padding: 0;
   box-sizing: border-box;
   font: inherit;
+}
+
+.button-filled {
+  background-color: var(--clr-300);
+  border-radius: 0.4rem;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  color: var(--clr-900);
+  transition: background 300ms ease-in-out, color 300ms ease-in-out;
+}
+
+.button-filled:hover,
+.button-filled:focus {
+  background-color: var(--clr-500);
+  color: var(--clr-100);
+}
+
+.button-hollow {
+  background-color: transparent;
+  border-radius: 0.4rem;
+  outline: 0.1875rem solid var(--clr-300);
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  color: var(--clr-300);
+  transition: background 300ms ease-in-out, color 300ms ease-in-out,
+    outline 300ms ease-in-out;
+}
+
+.button-hollow:hover,
+.button-hollow:focus {
+  background-color: var(--clr-300);
+  outline: none;
+  color: var(--clr-900);
+}
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--clr-300);
+  border-radius: 0.1875rem;
+}
+
+@media (min-width: 2560px) {
+  body {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 1024px) {
+  .button-filled {
+    padding-inline: 2rem;
+    padding-block: 1rem;
+  }
+  .button-hollow {
+    padding-inline: 2rem;
+    padding-block: 1rem;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1023px) {
+}
+
+@media (max-width: 768px) {
 }
