--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -24,14 +24,11 @@
 .hero-section > .left-side > .intro {
   color: var(--clr-100);
   line-height: 130%;
+  font-weight: 400;
 }
 
 .hero-section > .left-side > .hero-cta-container {
   display: flex;
-}
-
-.hero-section > .right-side > img {
-  width: 32rem;
 }
 
 .scroll-animation-container {
@@ -89,10 +86,106 @@
     width: 2rem;
     height: 2rem;
   }
+
+  .hero-section > .right-side > img {
+    width: 32rem;
+  }
 }
 
 @media (min-width: 769px) and (max-width: 1023px) {
+  .hero-section {
+    margin-block-start: 4rem;
+    padding-inline: 5rem;
+    padding-block-start: 2rem;
+    flex-direction: column-reverse;
+  }
+  .hero-section > .left-side {
+    gap: 2rem;
+  }
+  .hero-section > .left-side > .greeting {
+    font-size: 1rem;
+  }
+  .hero-section > .left-side > .name {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  .hero-section > .left-side > .tagline {
+    font-size: 1.1rem;
+  }
+  .hero-section > .left-side > .intro {
+    font-size: 1rem;
+  }
+  .hero-section > .left-side > .hero-cta-container {
+    gap: 1rem;
+    margin-bottom: 1rem;
+  }
+  .scroll-to-top {
+    bottom: 2rem;
+    right: 2rem;
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .scroll-to-top > img {
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .hero-section > .right-side {
+    display: flex;
+    justify-content: center;
+  }
+
+  .hero-section > .right-side > img {
+    width: 25rem;
+  }
 }
 
 @media (max-width: 768px) {
+  .hero-section {
+    margin-block-start: 4rem;
+    padding-inline: 2rem;
+    padding-block-start: 2rem;
+    flex-direction: column-reverse;
+  }
+  .hero-section > .left-side {
+    gap: 2rem;
+  }
+  .hero-section > .left-side > .greeting {
+    font-size: 1rem;
+  }
+  .hero-section > .left-side > .name {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  .hero-section > .left-side > .tagline {
+    font-size: 1.1rem;
+  }
+  .hero-section > .left-side > .intro {
+    font-size: 1rem;
+  }
+  .hero-section > .left-side > .hero-cta-container {
+    gap: 1rem;
+    margin-bottom: 1rem;
+  }
+  .scroll-to-top {
+    bottom: 2rem;
+    right: 2rem;
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .scroll-to-top > img {
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .hero-section > .right-side {
+    display: flex;
+    justify-content: center;
+  }
+
+  .hero-section > .right-side > img {
+    width: 15rem;
+  }
 }
