--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -45,7 +45,8 @@
   justify-content: center;
   border: none;
   outline: none;
-  background-color: var(--clr-920);
+  background-color: var(--clr-930);
+  backdrop-filter: blur(15px);
   border-radius: 0.1875rem;
   cursor: pointer;
 }
