--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,16 @@
 :root {
-  --ff-primary: "Roboto", sans-serif;
+  --ff-primary: "Inter", sans-serif;
 
-  --clr-100: #e3fff7;
-  --clr-300: #00ffb3;
+  --clr-100: #f1faee;
+  --clr-300: #8a4fff;
   --clr-500: #587c71;
-  --clr-900: #202222;
-  --clr-910: #202222b1;
-  --clr-920: #171919;
-  --clr-930: #17191983;
+  --clr-900: #0f1108;
 }
 
 body {
   font-family: var(--ff-primary);
   scroll-behavior: smooth;
-  background-color: var(--clr-900);
+  background-color: var(--clr-100);
 }
 
 *,
@@ -25,67 +22,6 @@ body {
   font: inherit;
 }
 
-.button-filled {
-  background-color: var(--clr-300);
-  border-radius: 0.4rem;
-  outline: none;
-  border: none;
-  cursor: pointer;
-  font-weight: bold;
-  color: var(--clr-900);
-  transition: background 300ms ease-in-out, color 300ms ease-in-out;
-}
-
-.button-filled:hover,
-.button-filled:focus {
-  background-color: var(--clr-500);
-  color: var(--clr-100);
-}
-
-.button-hollow {
-  background-color: transparent;
-  border-radius: 0.4rem;
-  outline: 0.1875rem solid var(--clr-300);
-  border: none;
-  cursor: pointer;
-  font-weight: bold;
-  color: var(--clr-300);
-  transition: background 300ms ease-in-out, color 300ms ease-in-out,
-    outline 300ms ease-in-out;
-}
-
-.button-hollow:hover,
-.button-hollow:focus {
-  background-color: var(--clr-300);
-  outline: none;
-  color: var(--clr-900);
-}
-
-::-webkit-scrollbar {
-  width: 0.5rem;
-}
-
-::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: var(--clr-300);
-  border-radius: 0.1875rem;
-}
-
-.page-title {
-  color: var(--clr-300);
-  font-size: 2rem;
-  font-weight: bold;
-}
-
-.page-secondary-title {
-  color: var(--clr-300);
-  font-size: 1.25rem;
-  font-weight: bold;
-}
-
 @media (min-width: 2560px) {
   body {
     max-width: 1440px;
@@ -94,34 +30,10 @@ body {
 }
 
 @media (min-width: 1024px) {
-  .button-filled {
-    padding-inline: 2rem;
-    padding-block: 1rem;
-  }
-  .button-hollow {
-    padding-inline: 2rem;
-    padding-block: 1rem;
-  }
 }
 
 @media (min-width: 769px) and (max-width: 1023px) {
-  .button-filled {
-    padding-inline: 1.5rem;
-    padding-block: 0.8rem;
-  }
-  .button-hollow {
-    padding-inline: 1.5rem;
-    padding-block: 0.8rem;
-  }
 }
 
 @media (max-width: 768px) {
-  .button-filled {
-    padding-inline: 1.5rem;
-    padding-block: 0.8rem;
-  }
-  .button-hollow {
-    padding-inline: 1.5rem;
-    padding-block: 0.8rem;
-  }
 }
