--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,18 @@ body {
   font: inherit;
 }
 
+::-webkit-scrollbar {
+  width: 0.6rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--clr-300);
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--clr-100);
+}
+
 @media (min-width: 2560px) {
   body {
     max-width: 1440px;
