--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,8 +1,43 @@
+.hero-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+@media (min-width: 2560px) {
+}
+
 @media (min-width: 1024px) {
+  .hero-section {
+    height: calc(100vh - 4rem);
+    background-image: url("../assets/background_desktop.svg");
+    background-size: contain;
+    background-position: center;
+    background-repeat: repeat;
+    transition: background-position 2000ms ease-out;
+  }
+}
+
+@media (prefers-reduced-motion) {
+  .hero-section {
+    transition: background-position 5000ms ease-out;
+  }
 }
 
 @media (min-width: 769px) and (max-width: 1023px) {
+  .hero-section {
+    height: calc(100vh - 4rem);
+  }
 }
 
 @media (max-width: 768px) {
+  .hero-section {
+    height: calc(100vh - 3rem);
+    background-image: url("../assets/background_mobile.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
 }
