--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  user-select: none;
 }
 
 .navbar-container > .nav-menu-container > .nav-menu,
@@ -51,7 +52,7 @@
 @media (min-width: 1024px) {
   .navbar-container {
     padding-inline: 4rem;
-    padding-block: 0.5rem;
+    height: 4rem;
   }
   .navbar-container > .logo {
     width: 3rem;
@@ -61,13 +62,14 @@
 @media (min-width: 769px) and (max-width: 1023px) {
   .navbar-container {
     padding-inline: 2rem;
-    padding-block: 0.5rem;
+    height: 4rem;
   }
 }
 
 @media (max-width: 768px) {
   .navbar-container {
     padding-inline: 1rem;
+    height: 3rem;
     padding-block: 0.5rem;
   }
   .navbar-container > .logo {
