resume page optimizations

--- a/src/styles/ResumePage.css
+++ b/src/styles/ResumePage.css
@@ -3,3 +3,11 @@ iframe {
   outline: none;
   border: none;
 }
+
+.resume-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+}
