--- a/src/styles/ResumePage.css
+++ b/src/styles/ResumePage.css
@@ -4,10 +4,56 @@ iframe {
   border: none;
 }
 
-.resume-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  width: 100vw;
+.resume-container > button {
+  position: fixed;
+  right: 2rem;
+  bottom: 2rem;
+  background-color: red;
+  color: var(--clr-100);
+  font-weight: bold;
+  border: none;
+  outline: none;
+  transition: background 300ms ease-in;
+  cursor: pointer;
+}
+
+.resume-container > button:hover,
+.resume-container > button:focus {
+  background-color: rgb(186, 0, 0);
+}
+
+@media (min-width: 1024px) {
+  .resume-container > .resume {
+    width: 50%;
+    display: flex;
+    margin: 2rem auto;
+  }
+  .resume-container > button {
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1023px) {
+  .resume-container > .resume {
+    width: 80vw;
+    display: flex;
+    margin: 2rem auto;
+  }
+  .resume-container > button {
+    padding: 0.8rem 1.75rem;
+    border-radius: 0.8rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .resume-container > .resume {
+    width: 90vw;
+    display: flex;
+    margin: 2rem auto;
+  }
+  .resume-container > button {
+    padding: 0.5em 1.5rem;
+    border-radius: 0.5rem;
+  }
 }
