--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -5,6 +5,7 @@
   justify-content: center;
   width: 100%;
   user-select: none;
+  position: relative;
 }
 
 .hero-section > .hero-data-container {
@@ -43,7 +44,40 @@
   cursor: pointer;
 }
 
+.hero-section > .social-links-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.hero-section > .social-links-container > a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border: 1px solid var(--clr-300);
+  border-radius: 50%;
+  padding: 0.75rem;
+  z-index: 100;
+}
+
+.hero-section > .social-links-container::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0.2rem;
+  height: 130%;
+  background-color: var(--clr-300);
+}
+
+.hero-section > .social-links-container > a > img {
+  width: 1.5rem;
+}
+
 @media (min-width: 2560px) {
+  .hero-section > .social-links-container {
+    display: none;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -73,6 +107,12 @@
   .hero-section > .cta-container {
     gap: 1.5rem;
     margin-block: 2rem;
+  }
+  .hero-section > .social-links-container {
+    position: fixed;
+    bottom: 4rem;
+    left: 4rem;
+    gap: 1rem;
   }
 }
 
@@ -110,6 +150,12 @@
     gap: 1rem;
     margin-block: 1rem;
   }
+  .hero-section > .social-links-container {
+    position: fixed;
+    bottom: 2rem;
+    left: 2rem;
+    gap: 1rem;
+  }
 }
 
 @media (max-width: 768px) {
@@ -139,6 +185,15 @@
   .hero-section > .cta-container {
     gap: 1rem;
     margin-block: 1rem;
+  }
+  .hero-section > .social-links-container::before {
+    height: 115%;
+  }
+  .hero-section > .social-links-container {
+    position: absolute;
+    bottom: 2rem;
+    right: 2rem;
+    gap: 1rem;
   }
 }
 
