--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -126,6 +126,7 @@
 @media (max-width: 768px) {
   .contact-section {
     padding-inline: 1rem;
+    padding-block-end: 7rem;
     flex-direction: column;
   }
   .contact-section > .left-side {
