--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -15,7 +15,7 @@ footer > p {
     align-items: center;
     justify-content: center;
     gap: 0.5rem;
-    height: 3rem;
+    padding-block: 1rem;
   }
   footer > p > img {
     width: 1rem;
