--- a/src/styles/Loader.css
+++ b/src/styles/Loader.css
@@ -1,10 +1,15 @@
 .loader-container {
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
-  gap: 1rem;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, 50%);
   color: var(--clr-900);
+}
+
+.loader-container > img {
+  width: 3rem;
 }
