--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -2,6 +2,7 @@
   color: var(--clr-300);
   font-weight: bold;
   position: relative;
+  user-select: none;
 }
 
 .projects-section > .page-title::after {
