--- a/src/styles/AllProjects.css
+++ b/src/styles/AllProjects.css
@@ -2,6 +2,7 @@
   font-weight: bold;
   color: var(--clr-300);
   position: relative;
+  user-select: none;
 }
 .all-projects-section > .page-title::after {
   content: "";
